create swagger for cart
